--- a/css/block/content.css
+++ b/css/block/content.css
@@ -1,8 +1,4 @@
 .content__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
+    justify-content: space-between;
+}
