--- a/css/block/rates.css
+++ b/css/block/rates.css
@@ -1,34 +1,23 @@
 .rates {
-    margin-bottom: 48px;
-  }
+  margin-bottom: 48px;
+}
   
-  .rates .title {
-    margin-bottom: 27px;
-  }
+.rates .title {
+  margin-bottom: 27px;
+}
   
-  .rates__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+.rates__list {
+  display: flex;
+}
   
   .rates__item {
     width: 248px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
     border: 1px solid transparent;
     border-radius: 5px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     padding: 40px 21px;
     margin-right: 20px;
   }
@@ -38,19 +27,13 @@
   }
   
   .rates__icon {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 70px;
     height: 70px;
     background-color: #4b73b5;
     border-radius: 50%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 35px;
   }
   
@@ -69,24 +52,15 @@
   }
   
   .rates__features {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-bottom: 21px;
+   display: flex;
+   flex-direction: column;
+   margin-bottom: 21px;
   }
   
   .rates__features-item {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     margin-bottom: 15px;
   }
   
@@ -106,7 +80,9 @@
   }
   
   .rates__price {
+    font-family: 'robotolight', Arial, sans-serif;
     font-size: 54px;
+    font-weight: normal;
   }
   
   .rates__currency {
