--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -1,10 +1,9 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
@@ -19,7 +18,7 @@ ul, li {
   margin: 0;
 }
 
-h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0;
 }
@@ -32,23 +31,17 @@ h2, h3, h4, h5, h6, p {
 .title {
   font-family: 'robotobold', Arial, sans-serif;
   font-size: 49px;
+  font-weight: normal;
 }
 
 .wrapper {
   min-width: 1140px;
-  overflow: hidden;
   min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  overflow: hidden;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .wrapper__content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
